--- a/front/index.html
+++ b/front/index.html
@@ -20,8 +20,7 @@
 }
 </style>
 
-<script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+<!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
 <script>
-  // VConsole will be exported to `window.VConsole` by default.
   const vConsole = new window.VConsole();
-</script>
+</script> -->
