fix: thanks to chenqi

--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <html>
     <script>
-        new WebSocket('ws://localhost:3000')
+        new WebSocket('ws://localhost:3000?token=123')
     </script>
 </html>
